--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>KWIZZ</title>
-</head>
-<body>
-    <header>
-        <div class="img-wrapper">
-            <img src="./assets/background.jpg" alt="">
+  </head>
+  <body>
+    <div class="first-container">
+      <header>
+        <div class="container">
+          <div class="typing">
+            <p class="welcome">
+              Welcome to <span class="k">K</span><span class="w">W</span
+              ><span class="i">I</span><span class="z-1">Z</span
+              ><span class="z-2">Z</span>
+            </p>
+          </div>
+
+          <div class="start-container">
+            <p class="text">"Where knowledge meets fun"</p>
+            <p class="another-text">
+              Enter your name to join this ultimate experience
+            </p>
+            <div class="down-arrows">
+              <i class="fa-solid fa-down-long fa-3x"></i>
+              <i class="fa-solid fa-down-long fa-3x"></i>
+              <i class="fa-solid fa-down-long fa-3x"></i>
+            </div>
+            <input type="text" />
+            <div class="error">*Please enter a name*</div>
+            <button class="start-quiz">Start quiz adventure</button>
+          </div>
         </div>
-    </header>
+      </header>
+    </div>
     <script type="module" src="script.js"></script>
-</body>
+  </body>
 </html>
