Completely restructure the homepage

--- a/index.html
+++ b/index.html
@@ -8,36 +8,34 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <title>KWIZZ</title>
+    <title>Kwizz</title>
+    <link rel="icon" href="./assets/rocket-solid (1).svg" type="image/x-icon">
   </head>
+
   <body>
     <div class="first-container">
-      <header>
+      <div class="img-container">
+        <img src="./assets/another-background.png" alt="" />
+        <p class="web-title"><i class="fa-solid fa-rocket" style="color: rgb(67 56 202);"></i>Kwizz</p>
+      </div>
+      <div class="homepage-container">
         <div class="container">
-          <div class="typing">
-            <p class="welcome">
-              Welcome to <span class="k">K</span><span class="w">W</span
-              ><span class="i">I</span><span class="z-1">Z</span
-              ><span class="z-2">Z</span>
-            </p>
-          </div>
-
-          <div class="start-container">
-            <p class="text">"Where knowledge meets fun"</p>
-            <p class="another-text">
-              Enter your name to join this ultimate experience
-            </p>
-            <div class="down-arrows">
-              <i class="fa-solid fa-down-long fa-3x"></i>
-              <i class="fa-solid fa-down-long fa-3x"></i>
-              <i class="fa-solid fa-down-long fa-3x"></i>
-            </div>
-            <input type="text" />
-            <div class="error">*Please enter a name*</div>
-            <button class="start-quiz">Start quiz adventure</button>
-          </div>
+              <div class="typing">
+                <p class="welcome">
+                  Welcome to Kwizz <span class="extra">!!!!</span>
+                </p>
+              </div>
+              <div class="start-container">
+                <p class="text">"Where knowledge meets fun"</p>
+                <p class="another-text">
+                  Enter your name to join this ultimate experience
+                </p>
+                <input type="text" />
+                <div class="error">*Please enter a name*</div>
+                <button class="start-quiz">Start quiz adventure <i class="fa-solid fa-rocket"></i></button>
+              </div>
         </div>
-      </header>
+      </div>
     </div>
     <script type="module" src="script.js"></script>
   </body>
